fix <Steps> styling

--- a/defi-demo/src/App.scss
+++ b/defi-demo/src/App.scss
@@ -148,3 +148,11 @@
         margin-right: 6px;
     }
 }
+
+.ant-steps-item-title, .ant-steps-item-description{
+    color: white !important;
+}
+
+.ant-steps-vertical {
+    padding-left: 30%;
+}
