--- a/defi-demo/src/App.scss
+++ b/defi-demo/src/App.scss
@@ -12,6 +12,10 @@
     display: flex;
     align-items: center;
 
+    @media screen and (max-width: 1280px) {
+        flex-direction: column;
+    }
+        
     a {
         color: white;
     }
