--- a/defi-demo/src/App.scss
+++ b/defi-demo/src/App.scss
@@ -11,16 +11,18 @@
     color: white;
     display: flex;
     align-items: center;
+    min-height: 100vh;
 
     @media screen and (max-width: 1280px) {
         flex-direction: column;
     }
-        
+
     a {
         color: white;
     }
 
     .menu {
+        gap: 1%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -31,6 +33,17 @@
         border-right: 1px dashed rgb(255 255 255 / 70%);
         font-size: calc(10px + 1vmin);
 
+        @media screen and (max-width: 1280px) {
+            flex-direction: row;
+            width: auto;
+            border-right: none;
+            margin-left: 0;
+
+            h3:first-child {
+                display: none;
+            }
+        }
+
         h3 {
             margin-bottom: 20px;
             color: #fff;
@@ -39,11 +52,14 @@
         a {
             margin-top: 15px;
             text-decoration: none;
+
+            @media screen and (max-width: 1280px) {
+                margin-top: 0px;
+            }
         }
     }
 
     .content {
-        min-height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -154,5 +170,5 @@
 }
 
 .ant-steps-vertical {
-    width: 500px;  
+    width: 500px;
 }
