--- a/defi-demo/src/App.scss
+++ b/defi-demo/src/App.scss
@@ -39,15 +39,15 @@
             border-right: none;
             margin-left: 0;
 
-            h3:first-child {
-                display: none;
-            }
+            // h3:first-child {
+            //     display: none;
+            // }
         }
 
-        h3 {
-            margin-bottom: 20px;
-            color: #fff;
-        }
+        // h3 {
+        //     margin-bottom: 20px;
+        //     color: #fff;
+        // }
 
         a {
             margin-top: 15px;
@@ -65,7 +65,7 @@
         align-items: center;
         justify-content: center;
         font-size: calc(10px + 2vmin);
-        width: calc(100% - 360px);
+        width: min(100vw, calc(100% - 360px));
 
         .info {
             div {
@@ -103,6 +103,7 @@
 
         &.w750 .items {
             width: 750px;
+            width: min(100vw, 750px);
         }
     }
 }
